--- a/directmail/services/delivery_letter/templates/delivery_letter/type_list.html
+++ b/directmail/services/delivery_letter/templates/delivery_letter/type_list.html
@@ -1,10 +1,8 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>$Title$</title>
-</head>
-<body>
-$END$
-</body>
-</html>
+{% extends "base.html" %}
+
+
+{% block content %}
+  <hr>
+  <h2>Выберите тип рассылки</h2>
+
+{% endblock %}
