--- a/directmail/services/delivery_letter/templates/delivery_letter/delivery.html
+++ b/directmail/services/delivery_letter/templates/delivery_letter/delivery.html
@@ -1,10 +1,11 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>$Title$</title>
-</head>
-<body>
-$END$
-</body>
-</html>
+{% extends "base.html" %}
+
+
+{% block content %}
+  <hr>
+  <h2>Выберите</h2>
+  <form action="" method="post" enctype='multipart/form-data'>{% csrf_token %}
+    {{ form.as_p }}
+    <input type="submit" value="Submit"/>
+  </form>
+{% endblock %}
